--- a/Front-end/profile.html
+++ b/Front-end/profile.html
@@ -137,6 +137,14 @@
                                      <button class="btn" id="sad_btn_post" onclick="likePub(5)">&#128546</button>
                                      <button class="btn" id="angry_btn_post" onclick="likePub(4)">&#128544</button>
                                  </div>
+                                 <div class="row" style="margin-left: 150px"> 
+                                     <p id="likec" style="margin-left: 35px">0</p>
+                                     <p id="lovec" style="margin-left: 57px">0</p>
+                                     <p id="laughc" style="margin-left: 57px">0</p>
+                                     <p id="wowc" style="margin-left: 57px">0</p>
+                                     <p id="sadc" style="margin-left: 57px">0</p>
+                                     <p id="angryc" style="margin-left: 55px">0</p>
+                                 </div>
                                   <div class="comms">
                                     <div id = "comments" class="msg_history">
                                         <div class="outgoing_msg">
