--- a/Front-end/profile.html
+++ b/Front-end/profile.html
@@ -295,10 +295,8 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg">
+                                <div id = "1" class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg" data-toggle="modal" data-target="#postModal" onclick="save(1)">
                                     <ul class="product__item__pic__hover">
-                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-comment"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
