--- a/Front-end/addstory.html
+++ b/Front-end/addstory.html
@@ -42,7 +42,7 @@
             <ul>
                 <li><a href="./feed.html">Home</a></li>
                 <li ><a href="./profile.html">Profile</a></li>
-                <li><a data-toggle="modal" data-target="#myModal">Add Photo</a></li>
+                <li><a href="./addfoto.html">Add Photo</a></li>
                 <li class="active"><a href="./addstory.html">Add Story</a></li>
                 <li><a href="./dm.html">DM's</a></li>
             </ul>
@@ -67,7 +67,7 @@
                         <ul>
                             <li><a href="./feed.html">Home</a></li>
                             <li><a href="./profile.html">Profile</a></li>
-                            <li><a data-toggle="modal" data-target="#myModal">Add Photo</a></li>
+                            <li><a href="./addfoto.html">Add Photo</a></li>
                             <li class="active"><a href="./addstory.html">Add Story</a></li>
                             <li><a href="./dm.html">DM's</a></li>
                         </ul>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-danger btn-block" data-dismiss="modal">NO</button>
-                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed">YES</button>
+                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" href="./login.html">YES</button>
                 </div>
             </div>
         </div>
@@ -152,6 +152,8 @@
                        </label>
                        <br>
                        <br>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
                         <h2>Select a filter</h2>
                           <select name="filters" id="filters" onchange="myFunction()">
                             <option value="none">None</option>
@@ -165,14 +167,6 @@
                             <option value="saturate">Saturate</option>
                             <option value="sepia">Sepia</option>
                           </select>
-
-                        <br>
-                    </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div>
-                            <h2>Enter Description: (Optional)</h2>
-                            <textarea id="descid" name="description" placeholder="Description" rows="5" cols="75"></textarea>
-                        </div>
                     </div>    
                 </div>
                 <br>
@@ -257,4 +251,5 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/maino.js"></script>
+    <script type="text/javascript" src="logout.js"></script>
     <script src="addstory.js"></script>
