--- a/Front-end/profile.html
+++ b/Front-end/profile.html
@@ -42,7 +42,7 @@
             <ul>
                 <li><a href="./feed.html">Home</a></li>
                 <li class="active"><a href="./profile.html">Profile</a></li>
-                <li><a data-toggle="modal" data-target="#myModal">Add Photo</a></li>
+                <li><a href="./addfoto.html">Add Photo</a></li>
                 <li><a href="./addstory.html">Add Story</a></li>
                 <li><a href="./dm.html">DM's</a></li>
             </ul>
@@ -67,7 +67,7 @@
                         <ul>
                             <li><a href="./feed.html">Home</a></li>
                             <li class="active"><a href="./profile.html">Profile</a></li>
-                            <li><a data-toggle="modal" data-target="#myModal">Add Photo</a></li>
+                            <li><a href="./addfoto.html">Add Photo</a></li>
                             <li><a href="./addstory.html">Add Story</a></li>
                             <li><a href="./dm.html">DM's</a></li>
                         </ul>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-danger btn-block" data-dismiss="modal">NO</button>
-                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed">YES</button>
+                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" href="./login.html">YES</button>
                 </div>
             </div>
         </div>
@@ -183,6 +183,7 @@
             <div class="row">   
                 <div class="col-lg-3 col-md-5">
                     <div class="sidebar">
+
                         <div class="sidebar__item">
                             <h4>My Profile</h4>
                         
@@ -208,16 +209,11 @@
                             <h2>My Story</h2>
                         </div>
                         <div class="row">
-                            <div class="product__discount__slider owl-carousel">
+                            <div id="mystories" class="product__discount__slider owl-carousel">
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
-                                        <div class="product__discount__item__pic set-bg"
-                                            data-setbg="img/product/discount/pd-1.jpg">
-                                        </div>
-                                        <div class="product__discount__item__text">
-                                            <span>Dried Fruit</span>
-                                            <h5><a href="#">Raisin’n’nuts</a></h5>
-                                            <div class="product__item__price">$30.00 <span>$36.00</span></div>
+                                        <div class="product__discount__item__pic set-bg">
+                                            <img src="img/breadcrumbs-bg.jpg"/>
                                         </div>
                                     </div>
                                 </div>
@@ -229,7 +225,7 @@
                                         <div class="product__discount__item__text">
                                             <span>Vegetables</span>
                                             <h5><a href="#">Vegetables’package</a></h5>
-                                            <div class="product__item__price">$30.00 <span>$36.00</span></div>
+                                        <div class="product__item__price">$30.00 <span>$36.00</span></div>
                                         </div>
                                     </div>
                                 </div>
@@ -292,7 +288,7 @@
                         </div>
                        
                     </div>
-                    <div class="row">
+                    <div class="row" id="mypostsdiv">
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
                                 <div id = "1" class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg" data-toggle="modal" data-target="#postModal" onclick="save(1)">
@@ -460,12 +456,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="product__pagination">
-                        <a href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#"><i class="fa fa-long-arrow-right"></i></a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -489,6 +479,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/maino.js"></script>
     <script src="profile.js"></script>
+    <script type="text/javascript" src="logout.js"></script>
 
 
 
