--- a/Front-end/addstory.html
+++ b/Front-end/addstory.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-danger btn-block" data-dismiss="modal">NO</button>
-                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" href="./login.html">YES</button>
+                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" onclick="location.href='./login.html'">YES</button>
                 </div>
             </div>
         </div>
