--- a/Front-end/dm.html
+++ b/Front-end/dm.html
@@ -68,7 +68,7 @@
                             <li><a href="./feed.html">Home</a></li>
                             <li><a href="./profile.html">Profile</a></li>
                             <li><a href="./addfoto.html">Add Photo</a></li>
-                            <li><a href="./.html">Add Story</a></li>
+                            <li><a href="./addstory.html">Add Story</a></li>
                             <li class="active"><a href="./dm.html">DM's</a></li>
                         </ul>
                     </nav>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-danger btn-block" data-dismiss="modal">NO</button>
-                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" href="./login.html">YES</button>
+                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" onclick="location.href='./login.html'">YES</button>
                 </div>
             </div>
         </div>
