--- a/Front-end/visualization.html
+++ b/Front-end/visualization.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-danger btn-block" data-dismiss="modal">NO</button>
-                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" href="./login.html">YES</button>
+                    <button class="btn btn-danger btn-block" data-dismiss="modal" id="logout_btn_feed" onclick="location.href='./login.html'">YES</button>
                 </div>
             </div>
         </div>
@@ -151,8 +151,9 @@
                         
                         <div class="sidebar__item">
                             <ul>
-                                <li class="active"><a href="./profile.html">My Posts</a></li>
-                                <li><a href="./visualization.html">Check Profile Visitors</a></li>                                
+                                <li><a href="./profile.html">My Posts</a></li>
+                                <li class="active"><a href="./visualization.html">Check Profile Visitors</a></li> 
+                                <li><a href="./followers.html">My Followers</a></li>
                             </ul>
                         </div>
                     </div>
